--- a/package.json
+++ b/package.json
@@ -6,5 +6,25 @@
     "express": "^4.18.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "start-dev ": "nodemon server.js"
+  },
+  "name": "tour-mongoose",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mozahidahmed/tour-mongoose.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mozahidahmed/tour-mongoose/issues"
+  },
+  "homepage": "https://github.com/mozahidahmed/tour-mongoose#readme",
+  "description": ""
 }
