--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "name": "tour-mongoose",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "devDependencies": {},
   "repository": {
     "type": "git",
