--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.10.0",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20"
   },
   "scripts": {
     "start": "node server.js",
@@ -14,7 +15,6 @@
   "name": "tour-mongoose",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mozahidahmed/tour-mongoose.git"
